# libertai-cli

./: .gitignore  Cargo.toml  LICENSE  RATATUI_MIGRATION.md  README.md  llms-install.md  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: crack-the-code-comparison.md  distribution.md  liberclaw-code-subcommand.md  overhaul-plan.md  parity-roadmap.md
packaging/: generate-assets.sh  install.sh
packaging/apt/: install.sh
packaging/brew/: formula.rb.tmpl
packaging/completions/: _libertai  libertai.bash  libertai.fish
packaging/man/: libertai.1
src/: cli.rs  client.rs  config.rs  lib.rs  main.rs  update_check.rs
src/agent_skills/libertai-agent-ops/: SKILL.md
src/agent_skills/libertai-chat-research/: SKILL.md
src/agent_skills/libertai-code-workflow/: SKILL.md
src/agent_skills/libertai-harness/: SKILL.md
src/auth/: wallet.rs
src/commands/: ask.rs  auth_ui.rs  chat.rs  chat_render.rs  claude_code_import.rs  claude_code_import_cli.rs  code.rs  code_agent_view.rs  code_agents.rs  code_approval_ipc.rs  code_approvals.rs  code_ask_user.rs  code_aux.rs  code_context_tool.rs  code_cron.rs  code_diff.rs  code_env_prompt.rs  code_factory.rs  code_guardrail.rs  code_hooks.rs  code_identity_prompt.rs  code_init.rs  code_mailbox.rs  code_mcp.rs  code_mcp_tool.rs  code_memory.rs  code_mode_prompt.rs  code_models.rs  code_notification.rs  code_output_style.rs  code_path_safety.rs  code_pr_comments.rs  code_sandbox.rs  code_sandbox_cli.rs  code_send_message.rs  code_session.rs  code_skill_tool.rs  code_skills.rs  code_slash_registry.rs  code_slash_router.rs  (+34 more)
src/commands/code_tui/: agent_view.rs  agents_panel.rs  app.rs  approvals.rs  diff.rs  footer.rs  highlight.rs  input.rs  input_layout.rs  markdown.rs  mod.rs  scrollback.rs  terminal.rs  theme.rs  view.rs  workflow_panel.rs  wrap.rs
src/skills_content/: aider-instructions.md  libertai-image.md  libertai-search.md
tests/: browser_sso_token.rs  config_roundtrip.rs  probes_chat_ask.rs  probes_completions.rs  probes_env_block.rs  probes_executing_actions.rs  probes_identity.rs  probes_judge.rs  probes_mcp.rs  probes_memory.rs  probes_output_discipline.rs  probes_phase0.rs  probes_plan_mode.rs  probes_print_mode.rs  probes_review_verification.rs  probes_secrets_hygiene.rs  probes_session_commands.rs  probes_text_output.rs  probes_workflow.rs
tests/common/: mod.rs
tests/fixtures/: ltai_pricing_aggregate.json
