[package]
name = "libertai-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Command-line tool for LibertAI: inference, image generation, and launching agent tools (Claude Code, OpenCode, Aider) with LibertAI as the backend."
license = "MIT"
repository = "https://github.com/Libertai/libertai-cli"
homepage = "https://libertai.io"
readme = "README.md"
keywords = ["libertai", "llm", "cli", "ai", "inference"]
categories = ["command-line-utilities"]
exclude = [".claude/", "target/", "*.bak*"]

[package.metadata.deb]
maintainer = "LibertAI <contact@libertai.io>"
section = "utils"
priority = "optional"
assets = [
    ["target/release/libertai", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/libertai/README", "644"],
    ["LICENSE", "usr/share/doc/libertai/LICENSE", "644"],
]

[lib]
name = "libertai_cli"
path = "src/lib.rs"

[[bin]]
name = "libertai"
path = "src/main.rs"

[[bin]]
name = "lcode"
path = "src/bin/lcode.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
url = "2"
dialoguer = { version = "0.11", default-features = false, features = ["password"] }
indicatif = "0.17"
owo-colors = "4"
anyhow = "1"
base64 = "0.22"
hex = "0.4"
k256 = { version = "0.13", features = ["ecdsa"] }
sha3 = "0.10"
zeroize = { version = "1", features = ["derive"] }

# `libertai code` — linked pi_agent_rust. MIT + OpenAI/Anthropic rider;
# license field above stays "MIT" on the integrated-code branch pending a
# policy call before merging to master.
#
# Pinned to our fork at Libertai/pi-agent-rust which carries three
# patches on top of upstream main:
# - `AgentSessionHandle::set_session_name` (in-process rename, upstream issue #62)
# - `AgentSessionHandle::set_max_tokens` (per-prompt cap override, upstream issue #63)
# - `hashline_edit` op defaulting to "replace" when omitted by the model
pi_agent_rust = { git = "https://github.com/Libertai/pi-agent-rust", rev = "5e980cad796ea748562db632abe0ed020fc0ea63", default-features = false }
asupersync = { version = "=0.3.1", default-features = false, features = ["tls-native-roots"] }
async-trait = "0.1"
futures = "0.3"
# `libertai code` interactive REPL — raw-mode input bar, cursor control,
# terminal-size queries. pi_agent_rust already pulls this in transitively,
# but we declare it explicitly so `use crossterm::...` resolves cleanly.
crossterm = "0.29"
# Catch Ctrl-C during an in-flight agent stream and forward it to pi's
# AbortHandle so the REPL survives the interrupt.
ctrlc = "3"

[profile.release]
lto = "thin"
strip = true
