[package]
name = "libertai-cli"
version = "0.3.0"
edition = "2021"
rust-version = "1.85"
description = "Command-line tool for LibertAI: inference, image generation, and launching agent tools (Claude Code, OpenCode, Aider) with LibertAI as the backend."
license = "MIT"
repository = "https://github.com/Libertai/libertai-cli"
homepage = "https://libertai.io"
readme = "README.md"
keywords = ["libertai", "llm", "cli", "ai", "inference"]
categories = ["command-line-utilities"]
exclude = [".claude/", "target/", "*.bak*"]

[package.metadata.deb]
maintainer = "LibertAI <contact@libertai.io>"
section = "utils"
priority = "optional"
assets = [
    ["target/release/libertai", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/libertai/README", "644"],
    ["LICENSE", "usr/share/doc/libertai/LICENSE", "644"],
    # Completions + man page are committed under packaging/ and kept in sync
    # with the CLI by tests/probes_completions.rs; regenerate with
    # packaging/generate-assets.sh after changing the CLI surface.
    ["packaging/completions/libertai.bash", "usr/share/bash-completion/completions/libertai", "644"],
    ["packaging/completions/_libertai", "usr/share/zsh/vendor-completions/_libertai", "644"],
    ["packaging/completions/libertai.fish", "usr/share/fish/vendor_completions.d/libertai.fish", "644"],
    ["packaging/man/libertai.1", "usr/share/man/man1/libertai.1", "644"],
]

[lib]
name = "libertai_cli"
path = "src/lib.rs"

[[bin]]
name = "libertai"
path = "src/main.rs"

[[bin]]
name = "lcode"
path = "src/bin/lcode.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
# `libertai completions <shell>` + hidden `libertai man` — both generated
# from the same `Cli` derive and printed to stdout for packaging to capture.
clap_complete = "4"
clap_mangen = "0.2"
# Hostname for the per-device API key label minted at login. The libc
# gethostname(2) wrapper works on minimal containers and Windows, unlike
# shelling out to a `hostname` binary.
gethostname = "1"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
dirs = "5"
url = "2"
dialoguer = { version = "0.12", default-features = false, features = ["password"] }
indicatif = "0.17"
owo-colors = "4"
anyhow = "1"
base64 = "0.22"
hex = "0.4"
k256 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.11"
sha3 = "0.10"
rand = "0.9"
tiny_http = "0.12"
zeroize = { version = "1", features = ["derive"] }

# `libertai code` — linked pi_agent_rust. MIT + OpenAI/Anthropic rider;
# license field above stays "MIT" for the release branch while the bundled
# dependency rider is tracked in the pinned fork.
#
# Pinned to our fork at Libertai/pi_agent_rust which carries four
# patches on top of upstream main:
# - `AgentSessionHandle::set_session_name` (in-process rename, upstream issue #62)
# - `AgentSessionHandle::set_max_tokens` (per-prompt cap override, upstream issue #63)
# - `hashline_edit` op defaulting to "replace" when omitted by the model
# - `AgentSessionHandle::prompt_with_content[_with_abort]` (multimodal SDK)
# - `AgentSessionHandle::{get_fork_messages,fork}` (desktop /fork integration)
# - bash `run_in_background` support for long-running servers/watchers
# - background bash follow-up tools (`bash_output`, `kill_bash`)
# - native `task` subagent tool for research/code-search delegation
# - asupersync 0.3.1 -> 0.3.2 bump (fixes franken-decision Result API break;
#   0.3.2 is the latest stable-compatible release — 0.3.3+ require nightly;
#   maps new `LockError::TimedOut` variant to `Session` error)
pi_agent_rust = { git = "https://github.com/Libertai/pi_agent_rust", rev = "f44c800b", default-features = false }
asupersync = { version = "=0.3.2", default-features = false, features = ["tls-native-roots"] }
async-trait = "0.1"
futures = "0.3"
# `libertai code` interactive REPL — raw-mode input bar, cursor control,
# terminal-size queries. pi_agent_rust already pulls this in transitively,
# but we declare it explicitly so `use crossterm::...` resolves cleanly.
crossterm = "0.29"
# Markdown → ANSI capture for the inline assistant turn marker + hanging
# indent in `libertai code`. pi pulls rich_rust transitively but does not
# re-export it (PiConsole's inner Console is private), so we render the
# decorated path through our own buffer-backed Console. Same version +
# features as pi's own dependency, so the lockfile stays unified.
rich_rust = { version = "0.2", features = ["full"] }
# Catch Ctrl-C during an in-flight agent stream and forward it to pi's
# AbortHandle so the REPL survives the interrupt.
ctrlc = "3"
# `libertai chat` line editing — persisted history, Emacs keys,
# bracketed-paste multiline input, styled prompts that self-disable on
# NO_COLOR/non-TTY. Chosen over reedline: synchronous (no extra
# runtime), much smaller dependency tree; pi's own editor is welded to
# its TUI event loop and is not cleanly reusable here.
rustyline = "18"
# Date formatting for /remember bullets. Pi pulls chrono in transitively
# but we declare it explicitly so `use chrono::Local` resolves cleanly.
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# Session/entry id generation for the Claude Code → pi import path.
# Pi pulls uuid transitively; we declare it so `use uuid::Uuid` resolves
# without depending on transitive feature flags.
uuid = { version = "1", features = ["v4"] }

# Ratatui TUI framework — replaces hand-rolled ANSI/cursor math in
# code_ui.rs with declarative layout, double-buffering, automatic
# resize/scroll. tui-textarea-2 for the multi-line input bar.
ratatui = { version = "0.30", features = ["all-widgets", "macros"] }
tui-textarea-2 = "0.11"
# Character display width for the markdown pre-wrap word-wrapping in
# `libertai code`. Ratatui pulls unicode-width in transitively but we
# declare it explicitly so `use unicode_width::UnicodeWidthStr` resolves
# cleanly without depending on transitive feature flags.
unicode-width = "0.2"
# External-editor flow (`libertai code` Ctrl+O): spawns `$EDITOR` on a
# `NamedTempFile` so the edited text round-trips back into the input bar.
# The crate is ALSO pulled in by `tests/probes_*.rs` (dev-only), but the TUI
# editor path needs it in production code, so it lives here (which also
# satisfies the dev side — Cargo unifies a single dep + a dev-only dep).
tempfile = "3"

# Mid-turn input pump (`libertai code` message queueing): needs a
# cbreak/no-echo terminal mode that crossterm doesn't expose — its raw
# mode also clears OPOST (breaking '\n' in streamed markdown output) and
# ISIG (breaking Ctrl+C-aborts-the-turn). Direct termios via libc keeps
# both flags intact while turning off echo and line buffering.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
# Black-box probes that spawn the `libertai` binary and assert on its
# stdout/stderr — see `tests/probes_*.rs` and `docs/parity-roadmap.md`.
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[features]
default = []
# Enables tier-2 LLM-judge probes that call LibertAI's free chat model
# to evaluate model-output-shape properties. Off by default so the
# default `cargo test` run stays offline + deterministic. Run with
# `cargo test --features tier2-probes -- --include-ignored`.
tier2-probes = []

[profile.release]
lto = "thin"
strip = true
